# herodesktop

./: .gitignore  README.md
examples/js/: basic.ts  streaming_app.ts
examples/python/: basic.py  streaming_app.py
js/: package.json
js/src/: index.ts
python/: README.md  pyproject.toml
python/herodesktop/: __init__.py  sdk.py
